editoast, front: refactor temporary speed limit import endpoint
Split the endpoint in two:
    - One endpoint remains responsible from importing temporary speed
      limits and their list of track ranges.
    - A new infra endpoint `delimited_area` returns the list of track
      ranges inside an area delimited by a list of entries and exits
      (directed locations on the tracks, quite similar to the position
      and direction of signs).
